2006-06-06  Robert Schuster  <robertschuster@fsfe.org>

	* java/awt/BufferedImage.java: Added fourth 8 to bits4 field.

2006-06-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JTable.java
	(AccessibleJTableHeaderCell.header): New field,
	(AccessibleJTableHeaderCell.columnIndex): Likewise,
	(AccessibleJTableHeaderCell.AccessibleJTableHeaderCell()): Initialise,
	(AccessibleJTableHeaderCell.getColumnHeaderRenderer): New method,
	(AccessibleJTableHeaderCell.getAccessibleContext): Implemented,
	(AccessibleJTableHeaderCell.getAccessibleRole): Implemented,
	(AccessibleJTable.getAccessibleChild(int)): Overridden,
	(AccessibleJTable.getAccessibleAt): Reimplemented.

2006-06-05  Sven de Marothy  <sven@physto.se>

	* include/gnu_java_awt_peer_gtk_ComponentGraphics.h
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
	* gnu/java/awt/peer/gtk/ComponentGraphics.java
	(initFromVolatile): New method.
	* gnu/java/awt/peer/gtk/GtkVolatileImage.java
	* gnu/java/awt/peer/gtk/VolatileImageGraphics.java
	Reimplement.
	* include/gnu_java_awt_peer_gtk_GtkVolatileImage.h
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkVolatileImage.c
	(copyArea, drawVolatileImage): New methods.
	
2006-06-05  Tania Bento  <tbento@redhat.com>

	* javax/swing/JFrame.java
	(frameInit): Set background color and fixed layout parameters.

2006-06-05  Tom Tromey  <tromey@redhat.com>

	* NEWS: Mention VMURLConnection.

2006-06-05  Lillian Angel  <langel@redhat.com>

	* native/plugin/gcjwebplugin.cc:
	Added new field to keep track of initialization.
	(plugin_start_appletviewer): Fixed to return an error value, if
	an error was encountered when loading the appletviewer.
	(GCJ_NEW): Added call to plugin_failed if the loading of the appletviewer
	has failed.
	(plugin_failed): New helper function. Shows a warning if the appletviewer
	has not been installed.
	(NP_Initialize): Added code to make sure this function is only called
	once.

2006-06-05  Lillian Angel  <langel@redhat.com>
